# JSPyBridge

./: .gitignore  .jshintrc  pyproject.toml
src/javascript/: __init__.py  __main__.py  config.py  connection.py  errors.py  events.py  proxy.py  pyi.py
src/javascript/js/: pyi.js
