[project]
name = "javascript"
version = "1!1.1.3"
description = "Call and interop Node.js APIs with Python"
authors = [
    {name = "extremeheat", email = "extreme@protonmail.ch"},
]
dependencies = [
    "loguru>=0.7.2",
]
requires-python = ">=3.7, <4"
readme = "README.md"
license = {text = "MIT"}
keywords = ["node", "javascript", "bridge", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
]


[project.urls]
Homepage = "https://github.com/extremeheat/JSPyBridge"
"Bug Reports" = "https://github.com/extremeheat/JSPyBridge/issues"
"Say Thanks!" = "https://github.com/extremeheat/JSPyBridge"
Source = "https://github.com/extremeheat/JSPyBridge/"

[project.optional-dependencies]
dev = [
    "check-manifest",
]
test = [
    "coverage",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/javascript"]
